# evergreen

./: .gitignore  Cargo.toml  CmdIds.csv  README.md  build.rs  buildrelease.bat  goals.md  index.js  packetIds.json  run.bat  test.json
all_protos/: AAJAAOKIJHF.proto  ABBBKIDODLJ.proto  ACBDKPGMCNH.proto  ACNFCMOJFAB.proto  ADEECIJFDOE.proto  ADLNAMCMMNP.proto  ADMIOIMGPLK.proto  AEEKABMMKNE.proto  AEIENHDOBGJ.proto  AFKACLJCCHI.proto  AGBDLCMHIPB.proto  AGFJDCJANKA.proto  AGGICDIEHNL.proto  AGNLMOPPIFH.proto  AHJAHOLPBLK.proto  AHMNLAOFJBB.proto  AIGHOMHDNIL.proto  AIOCEOMJKII.proto  AJCFJJFJJMB.proto  AJFDJLKFKJM.proto  AJKKNJIKCJA.proto  ALAMJIMOCOP.proto  ALCGBNPJBHL.proto  AMFOFAPEHGM.proto  ANIHIBEGDJC.proto  AOHAOPDNHFG.proto  AbilityAppliedAbility.proto  AbilityAppliedModifier.proto  AbilityAttachedModifier.proto  AbilityBornType.proto  AbilityChangeNotify.proto  AbilityControlBlock.proto  AbilityEmbryo.proto  AbilityGadgetInfo.proto  AbilityIdentifier.proto  AbilityInvocationFailNotify.proto  AbilityInvocationFixedNotify.proto  AbilityInvocationsNotify.proto  AbilityInvokeArgument.proto  AbilityInvokeEntry.proto  (+3610 more)
common/: Cargo.toml  build.rs
common/src/: lib.rs
data/: CmdIds.csv
evergreen/: Cargo.toml  run.bat
evergreen/src/: client_server_pair.rs  evergreen.rs  iridium_backend.rs  key_bruteforce.rs  lib.rs  mtkey.rs  packet_processor.rs  protobuf_decoder.rs  sniffer.rs  udp_data_processor.rs
evergreen/src/iridium_backend/: iridium_backend.rs  main.rs
protos/: AAAOLHAKGIO.proto  ABLOFNDBMFD.proto  AFLCCHIGHFC.proto  AGEEAJGINIF.proto  AIHKOACHDJH.proto  AJDBLJCEGMM.proto  ALCDEAAGBLC.proto  AMNJIKMPMHN.proto  ANOKFBLCGGM.proto  APHNJHLAANL.proto  AStarMethod.proto  AbilityAppliedAbility.proto  AbilityAttachedModifier.proto  AbilityChangeNotify.proto  AbilityEmbryo.proto  AbilityGadget.proto  AbilityGadgetInfo.proto  AbilityIdentifier.proto  AbilityInvocationFixedNotify.proto  AbilityInvokeArgument.proto  AbilityMixinRecoverInfo.proto  AbilityScalarType.proto  AbilityScalarValueEntry.proto  AbilityString.proto  AbilitySyncStateInfo.proto  AcceptCityReputationRequestReq.proto  AchievementAllDataNotify.proto  ActivityAcceptAllGiveGiftRsp.proto  ActivityAcceptGiftResultInfo.proto  ActivityAcceptGiveGiftReq.proto  ActivityBannerClearReq.proto  ActivityBannerClearRsp.proto  ActivityCondStateChangeNotify.proto  ActivityDisableTransferPointInteractionNotify.proto  ActivityDungeonAvatar.proto  ActivityFriendGiftWishData.proto  ActivityGetCanGiveFriendGiftReq.proto  ActivityGetCanGiveFriendGiftRsp.proto  ActivityGetFriendGiftWishListReq.proto  ActivityGetRecvGiftListRsp.proto  (+1625 more)
rs/: Cargo.toml  README.md
rs/src/: main.rs
rustytoolkit/: Cargo.toml  run.bat
rustytoolkit/src/: app.rs  lib.rs  main.rs  session.rs
rustytoolkit/src/widgets/: mod.rs  widget.rs
src/: client_server_pair.rs  evergreen.rs  iridium_backend.rs  key_bruteforce.rs  lib.rs  main.rs  mtkey.rs  packet_processor.rs  protobuf_decoder.rs  random_cs.rs  sniffer.rs  udp_data_processor.rs  ws_thread.rs
tools/: index.js
ts/: package-lock.json  package.json
ts/bf/: MT64.ts  csrandom.ts  mtkey.ts  test.ts
ts/src/: Conversation.ts  PacketUtil.ts  ProtoFactory.ts  index.ts  protobuf.js  protobufUtil.ts
ts/src/test/: proto_raw_decoder.ts
ts/src/test/protobuf_decoder/: hexUtils.ts  protobufDecoder.ts  protobufPartDecoder.ts  varintUtils.ts
