[package]
name = "evergreen_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.0.0"
tungstenite = "0.18.0"
ctrlc = { version = "3.0", features = ["termination"] }
url = "2.3.1"
protobuf = "3.2.0"
bytes = "1.4.0"
kcp = {git = "https://github.com/RustySamovar/kcp"}
rsa = "0.8.1"
base64 = "0.13.0"
protobuf-json-mapping = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2.0"