[package]
name = "rustytoolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toolkit"
path = "src/lib.rs"


[[bin]]
name = "rustytoolkit"
path = "src/main.rs"


[dependencies]
evergreen_rs = { path = "../evergreen" }
common = { path = "../common" }
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { version = "1", features = ["derive"] }

pcap = "1.0.0"
crossbeam-channel = "0.5.8"
protobuf = "3.2.0"